Fixes #980 sinking into launchpad
Parts used to sink into launch pad.
Modified 1m part to fix collision mesh and problem corrected.
Modified 0m part and found that parts below a certain thickness will
always fall through launchpad.
Modified light animation in 0m part.
Source files created for all parts.

--- a/Resources/GameData/kOS/Parts/kOSMachine0m/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSMachine0m/part.cfg
@@ -3,7 +3,7 @@ PART
 // --- general parameters ---
 name = kOSMachine0m
 module = Part
-author = SMA
+author = SMA and Peter Goddard
 
 // --- asset parameters ---
 mesh = model/model.mu
@@ -12,8 +12,8 @@ rescaleFactor = 1
 
 // --- node definitions ---
 // definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z, connector node size
-node_stack_bottom = 0.0, -0.0566, 0.0, 0.0, 1.0, 0.0, 0
-node_stack_top = 0.0, 0.0466, 0.0, 0.0, 1.0, 0.0, 0
+node_stack_bottom = 0.0, -0.04, 0.0, 0.0, -1.0, 0.0, 0
+node_stack_top = 0.0, 0.03, 0.0, 0.0, 1.0, 0.0, 0
 
 
 // --- Tech tree ---
@@ -29,7 +29,7 @@ manufacturer = Compotronix
 description = Would you trust life and limb to a mindless autopilot, powered by untested software you hastily wrote yourself? Spacefaring kerbals would!
 
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-attachRules = 1,0,1,1,1
+attachRules = 1,0,1,1,0
 
 // --- standard part parameters ---
 mass = 0.08
@@ -58,7 +58,7 @@ MODULE
 	name = ModuleLight
 	lightName = PowerLight
 	useAnimationDim = true
-	lightBrightenSpeed = 4
+	lightBrightenSpeed = 8
 	lightDimSpeed = 4
 	resourceAmount = 0.01
 	animationName = PowerLight
