--- a/Resources/GameData/kOS/Parts/kOSMachine1m/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSMachine1m/part.cfg
@@ -1,9 +1,9 @@
 PART
 {
-// --- general parameters ---
+// --- general parameters ---  V2~ fixed collision mesh
 name = kOSMachine1m
 module = Part
-author = KevinLaity
+author = KevinLaity / Peter Goddard
 
 // --- asset parameters ---
 mesh = model/model.mu
