--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: csharp
 solution: src/kOS.sln
 
+# Pre-shared token for pushing notifications to slack chat
+notifications:
+  slack: ksp-kos:51DTQ4ZBP9SlGNnLWJ5D84vp
+
 # Before the install the library dlls need to be downloaded
 before_install:
 - cd Resources
