--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ after_script:
 - cd ../
 
 before_deploy:
-- mkdir KSP-KOS/KOS/bin/dist 
-- tar -zcvf KSP-KOS/KOS/bin/dist/build_$TRAVIS_BUILD_NUMBER.tgz KSP-KOS/KOS/bin/Release/.
+- mkdir KSP-KOS/KOS/src/kOS/bin/dist 
+- tar -zcvf KSP-KOS/KOS/src/kOS/bin/dist/build_$TRAVIS_BUILD_NUMBER.tgz KSP-KOS/KOS/src/kOS/bin/Release/.
 
 deploy:
   provider: s3
@@ -28,4 +28,4 @@ deploy:
   secret_access_key: "$S3_DEPLOY_SECRET"
   bucket: "kos-artifacts"
   skip_cleanup: true
-  local_dir: "KSP-KOS/KOS/bin/dist/"
+  local_dir: "KSP-KOS/KOS/src/kOS/bin/dist/"
