--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,8 @@ after_script:
 - cd ../
 
 before_deploy:
-- ls -la
-- pwd
-- mkdir KSP-KOS/KOS/src/kOS/bin/dist 
-- tar -zcvf KSP-KOS/KOS/src/kOS/bin/dist/build_$TRAVIS_BUILD_NUMBER.tgz KSP-KOS/KOS/src/kOS/bin/Release/.
+- mkdir src/kOS/bin/dist 
+- tar -zcvf src/kOS/bin/dist/build_$TRAVIS_BUILD_NUMBER.tgz src/kOS/bin/Release/.
 
 deploy:
   provider: s3
@@ -30,4 +28,4 @@ deploy:
   secret_access_key: "$S3_DEPLOY_SECRET"
   bucket: "kos-artifacts"
   skip_cleanup: true
-  local_dir: "KSP-KOS/KOS/src/kOS/bin/dist/"
+  local_dir: "src/kOS/bin/dist/"
