Implement Dunbaratu's outbound symlink idea
If /KSPdirlink is a symlink (or a directory, on Windows), the dlls from
the build will be copied to /KSPdirlink/GameData/kOS/Plugins. As before,
they will always be copied to /Resources/GameData/kOS/Plugins.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ packages/
 Resources/GameData/kOS/Plugins/
 !Resources/GameData/kOS/ICSharpCode.SharpZipLib.dll
 
+# Symlink to KSP directory
+KSPdirlink
+
 # OS Specific
 .DS_STORE*
 [Tt]humbs.db
