Resolves #1042 with a few new clips and sound mgr
There is now infrastructure in place to let other devs
make sound effects where desired, and I've used
it to:

- move the terminal beep to this new system.
- add a terminal clicker option. (not avail from a script).
- add a sound effect on KOSExceptions option. (CONFIG:AUDIOERR)

The technique is this:

Make your own .wav or .ogg file, and add it to
the resources folder, then append a line like the
following to SoundMaker.Awake():

```
// Put this in SoundMaker.Awake():
LoadSound("mysound", "file://"+ kspDirectory + "GameData/kOS/GFX/mysound_file.wav");
```

Then you can invoke the sound anywhwere you like with:
```
shared.SoundMaker.BeginSound("mysound").
```

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Screen\SubBuffer.cs" />
     <Compile Include="Screen\TextEditor.cs" />
     <Compile Include="SharedObjects.cs" />
+    <Compile Include="Sound\ISoundMaker.cs" />
     <Compile Include="UpdateHandler.cs" />
     <Compile Include="UserIO\UnicodeCommand.cs" />
     <Compile Include="Utilities\Debug.cs" />
@@ -178,7 +179,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Sound" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
