--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -96,6 +96,7 @@
     </Compile>
     <Compile Include="Sound\SoundMaker.cs" />
     <Compile Include="Suffixed\HsvColor.cs" />
+    <Compile Include="Suffixed\PIDLoop.cs" />
     <Compile Include="Suffixed\ResourceTransferValue.cs" />
     <Compile Include="Screen\DelegateDialog.cs" />
     <Compile Include="Screen\KOSManagedWindow.cs" />
