converted to case insensitive

--- a/src/kOS.Safe.Test/kOS.Safe.Test.csproj
+++ b/src/kOS.Safe.Test/kOS.Safe.Test.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\MixedCollectionPrintingTest.cs" />
+    <Compile Include="Structures\StringValueTest.cs" />
     <Compile Include="Structure\ClampSetSuffixTest.cs" />
     <Compile Include="Collections\LexiconTest.cs" />
     <Compile Include="Collections\ListValueTest.cs" />
