--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -178,6 +178,9 @@
     <Compile Include="Utilities\kOSKeys.cs" />
     <Compile Include="Utilities\Math.cs" />
     <Compile Include="Utilities\TickGen.cs" />
+    <Compile Include="Encapsulation\QueueValue.cs" />
+    <Compile Include="Encapsulation\StackValue.cs" />
+    <Compile Include="Encapsulation\EnumerableValue.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Compilation\CompiledObject-doc.md" />
