--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -182,10 +182,18 @@
     <Compile Include="Encapsulation\QueueValue.cs" />
     <Compile Include="Encapsulation\StackValue.cs" />
     <Compile Include="Encapsulation\EnumerableValue.cs" />
+    <Compile Include="Serialization\Formatter.cs" />
+    <Compile Include="Serialization\JSONFormatter.cs" />
+    <Compile Include="Serialization\SerializationMgr.cs" />
+    <Compile Include="Serialization\TerminalFormatter.cs" />
+    <Compile Include="SimpleJson.cs" />
+    <Compile Include="Exceptions\KOSSerializationException.cs" />
+    <Compile Include="Serialization\DictionaryWithHeader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Compilation\CompiledObject-doc.md" />
     <None Include="Compilation\KS\kRISC.tpg" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -212,4 +220,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <Folder Include="Serialization\" />
+  </ItemGroup>
 </Project>
