--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -29,6 +29,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Shell|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Shell\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -41,6 +50,7 @@
     <Compile Include="Binding\BindingAttribute.cs" />
     <Compile Include="Binding\BindingDelgate.cs" />
     <Compile Include="Binding\BoundVariable.cs" />
+    <Compile Include="Binding\IBindingManager.cs" />
     <Compile Include="Compilation\Calculator.cs" />
     <Compile Include="Compilation\CodePart.cs" />
     <Compile Include="Compilation\CompileCache.cs" />
@@ -129,12 +139,15 @@
     <Compile Include="Exceptions\KOSUnaryOperandTypeException.cs" />
     <Compile Include="Exceptions\KOSWrongControlValueTypeException.cs" />
     <Compile Include="Exceptions\KOSWrongCPUVesselException.cs" />
+    <Compile Include="Execution\CPU.cs" />
     <Compile Include="Execution\IKOSScopeObserver.cs" />
     <Compile Include="Execution\ICpu.cs" />
     <Compile Include="Execution\IProgramContext.cs" />
     <Compile Include="Execution\IStack.cs" />
     <Compile Include="Execution\IUserDelegate.cs" />
     <Compile Include="Execution\KOSArgMarkerType.cs" />
+    <Compile Include="Execution\ProgramContext.cs" />
+    <Compile Include="Execution\Stack.cs" />
     <Compile Include="Execution\SurboutineContext.cs" />
     <Compile Include="Execution\UserDelegate.cs" />
     <Compile Include="Execution\Variable.cs" />
