Delegates working for User functions.

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Compilation\ProgramBuilderInterpreter.cs" />
     <Compile Include="Compilation\PseudoNull.cs" />
     <Compile Include="Compilation\Script.cs" />
+    <Compile Include="Encapsulation\KOSDelegate.cs" />
     <Compile Include="Encapsulation\ConstantValue.cs" />
     <Compile Include="Encapsulation\Enumerator.cs" />
     <Compile Include="Encapsulation\FileInfo.cs" />
@@ -104,7 +105,10 @@
     <Compile Include="Encapsulation\Suffixes\Suffix.cs" />
     <Compile Include="Encapsulation\Suffixes\SuffixDelegates.cs" />
     <Compile Include="Encapsulation\Suffixes\TwoArgsSuffix.cs" />
+    <Compile Include="Encapsulation\Suffixes\VarArgsSuffix.cs" />
+    <Compile Include="Encapsulation\Suffixes\VarArgsVoidSuffix.cs" />
     <Compile Include="Encapsulation\TerminalStruct.cs" />
+    <Compile Include="Encapsulation\UserDelegate.cs" />
     <Compile Include="Encapsulation\VersionInfo.cs" />
     <Compile Include="Exceptions\KOSDefaultParamNotAtEndException.cs" />
     <Compile Include="Exceptions\KOSOnceInvalidHereException.cs" />
@@ -147,10 +151,10 @@
     <Compile Include="Execution\IStack.cs" />
     <Compile Include="Execution\IUserDelegate.cs" />
     <Compile Include="Execution\KOSArgMarkerType.cs" />
+    <Compile Include="Execution\KOSPassThruUserReturn.cs" />
     <Compile Include="Execution\ProgramContext.cs" />
     <Compile Include="Execution\Stack.cs" />
     <Compile Include="Execution\SurboutineContext.cs" />
-    <Compile Include="Execution\UserDelegate.cs" />
     <Compile Include="Execution\Variable.cs" />
     <Compile Include="Execution\VariableScope.cs" />
     <Compile Include="Function\FunctionAttribute.cs" />
