Added BuiltinDelegate and made naked () call work.
In addition to adding in the ability to get delegates of
Builtins using the '@' operator, you can now also call
delegates (all of them) without having to use the :call
suffix if you don't want to.

Example: Making delegates of the built-in vector constructor V():

set makevec to V@.
set v1 to makevec:call(1,2,3).
print v1.
V(1, 2, 3)
set v1 to makevec(1,2,3).
print v1.
V(1, 2, 3)
print V@:curry(1,2):call(3).
V(1, 2, 3)
print V@:curry(1,2)(3).
V(1, 2, 3)
print V@:curry(1):curry(2)(3).
V(1, 2, 3)

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Compilation\ProgramBuilderInterpreter.cs" />
     <Compile Include="Compilation\PseudoNull.cs" />
     <Compile Include="Compilation\Script.cs" />
+    <Compile Include="Encapsulation\BuiltinDelegate.cs" />
     <Compile Include="Encapsulation\KOSDelegate.cs" />
     <Compile Include="Encapsulation\ConstantValue.cs" />
     <Compile Include="Encapsulation\Enumerator.cs" />
@@ -152,7 +153,7 @@
     <Compile Include="Execution\IStack.cs" />
     <Compile Include="Execution\IUserDelegate.cs" />
     <Compile Include="Execution\KOSArgMarkerType.cs" />
-    <Compile Include="Execution\KOSPassThruUserReturn.cs" />
+    <Compile Include="Execution\KOSPassThruReturn.cs" />
     <Compile Include="Execution\ProgramContext.cs" />
     <Compile Include="Execution\Stack.cs" />
     <Compile Include="Execution\SurboutineContext.cs" />
