code review for Serialization

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="../kOS.Safe.Test/packages.config" />
   <repository path="../kOS.Safe/packages.config" />
+  <repository path="..\kOS.Safe.Test\packages.config" />
+  <repository path="..\kOS.Safe\packages.config" />
 </repositories>
