--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -216,7 +216,5 @@
   </Target>
   -->
   <ItemGroup />
-  <ItemGroup>
-    <Folder Include="Serialization\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
