Fixes #1283 : better msg for KOSCompileException
An example of the sort of error that is now reported better is this:

when x = 0 then {
  print "x is zero".
  wait 2.  // compile error: a wait inside a trigger.
}

and this:

if x = 0 {
  break. // compile error: you can't break when not in a loop
}

Basically, it's all the stuff the parse rules say is fine but
for further contextual reasons the parser isn't smart enough to
understand, it's considered a compile error.

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Compilation\KS\BreakInfo.cs" />
     <Compile Include="Compilation\KS\Compiler.cs" />
     <Compile Include="Compilation\KS\Context.cs" />
+    <Compile Include="Compilation\KS\LineCol.cs" />
     <Compile Include="Compilation\KS\Scope.cs" />
     <Compile Include="Compilation\KS\Subprogram.cs" />
     <Compile Include="Compilation\KS\KSScript.cs" />
