1st pass at implementing kOSVesselModule
kOSVesselModule.cs
* Implement new vessel module to manage vessel specific values
* Manage steering manager
IFlightControlParameter.cs
* New interface for flight controls
kOS.csproj
* Reference the new files
FlightControlManager.cs
* Stop using SteeringManagerProvider, and reference the new vessel
module instead
FlightStats.cs
* Get the STEERINGMANGER from the vessel module instead of the provider
SteeringManager.cs
* Implement IFlightControlParameter interface
* Stop using provider

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Binding\TerminalSettings.cs" />
     <Compile Include="Binding\BindingsUniverse.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechFactory.cs" />
+    <Compile Include="Control\IFlightControlParameter.cs" />
     <Compile Include="Factories\IFactory.cs" />
     <Compile Include="Factories\StandardFactory.cs" />
     <Compile Include="Function\BuildList.cs" />
@@ -98,6 +99,7 @@
     <Compile Include="Module\Bootstrapper.cs" />
     <Compile Include="Module\kOSLightModule.cs" />
     <Compile Include="Module\KOSNameTag.cs" />
+    <Compile Include="Module\kOSVesselModule.cs" />
     <Compile Include="Persistence\PersistenceExtensions.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
