Properly print non-string lexicon keys

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -212,9 +212,10 @@
     <Compile Include="Serialization\TerminalFormatter.cs" />
     <Compile Include="SimpleJson.cs" />
     <Compile Include="Exceptions\KOSSerializationException.cs" />
-    <Compile Include="Serialization\DictionaryWithHeader.cs" />
     <Compile Include="Serialization\SafeSerializationMgr.cs" />
     <Compile Include="Encapsulation\ISerializableValue.cs" />
+    <Compile Include="Serialization\Dump.cs" />
+    <Compile Include="Serialization\DumpWithHeader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Compilation\CompiledObject-doc.md" />
