Re-write kOSLightModule
kOSLightModule.cs
* Re-write to manage electricity and color better
* Add processElectricity method, which adjusts power consumption based
on color and change in time.
* Changed color method to streamline setting the colors on the light and
renderer objects themselves.
* Improved interface with ModuleLight
kOSLiteModule.cs
* Deleted in favor of new file in Module folder
kOS.csproj
* Add reference to kOSLightModule (kOSLiteModule was not referenced
previously)
part.cfg
* Update config to use kOSLightModule
* Add resourceAmount field
* Add default color (50% red)

--- a/Resources/GameData/kOS/Parts/kOSkal9000/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSkal9000/part.cfg
@@ -46,13 +46,17 @@ MODULE
 {
 	name = ModuleLight
 	lightName = PowerLight
+	lightR = 0.5
+	lightG = 0
+	lightB = 0
 	//resourceAmount = .002
 	//useResources = true
 }
 
 MODULE
 {
-	name = kOSLiteModule
+	name = kOSLightModule
+	resourceAmount = 0.02
 }
 RESOURCE
 {
